tests/rosetta/transpiler/Elixir/binary-strings.error
run: exit status 1
** (SyntaxError) invalid syntax found on /workspace/mochi/tests/rosetta/transpiler/Elixir/binary-strings.exs:161:25:
     error: unexpected comma. Parentheses are required to solve ambiguity in nested calls.

     This error happens when you have nested function calls without parentheses. For example:

         parent_call a, nested_call b, c, d

     In the example above, we don't know if the parameters "c" and "d" apply to the function "parent_call" or "nested_call". You can solve this by explicitly adding parentheses:

         parent_call a, nested_call(b, c, d)

     Or by adding commas (in case a nested call is not intended):

         parent_call a, nested_call, b, c, d

     Elixir cannot compile otherwise. Syntax error before: ','
     │
 161 │         Process.put(:f, if val == 110, do: (Process.get(:f) ++ [109]), else: (Process.get(:f) ++ [val]))
     │                         ^
     │
     └─ /workspace/mochi/tests/rosetta/transpiler/Elixir/binary-strings.exs:161:25
    (elixir 1.18.3) lib/code.ex:1525: Code.require_file/2
